# rusty-todos

./: .gitignore  Cargo.toml  docker-compose.yaml
config/: access_keys.pem  access_keys.pem.pub  development.yaml
config/keys/: access_key.pem  access_key_pub.pem
migrations/: 20250205150243_create-users-table.up.sql
src/: app.rs  error.rs  lib.rs
src/config/: app.rs  db.rs  mod.rs  state.rs  telemetry.rs
src/controllers/: auth.rs
src/error/: error.rs  kinds.rs  mod.rs
src/models/: users.rs
src/tracing/: http.rs  instrumentation.rs  logger.rs  mod.rs
tests/models/: user.rs
