[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["tracing-error", "issue-url", "capture-spantrace", "color-spantrace"] }
hyper = "1.6.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
