[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["tracing-error", "issue-url", "capture-spantrace", "color-spantrace"] }
config = { version = "0.15.7", features = ["yaml"] }
hyper = "1.6.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["uuid", "chrono", "postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "serde"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
